# pitch-shifter

./: process.py  pyproject.toml  teste.py
src/: dsp.py  main.py  settings.py  utils.py
src/controllers/: plotter.py
tmp/: bk.py  bk2.py  process.py  process_2.py  pyqt.py  rascunho.yml  teste.py
