[tool.poetry]
name = "dsp"
version = "0.1.0"
description = ""
authors = ["douglas.jovenil <douglas.jovenil.ext@ipiranga.ipiranga>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
decouple = "^0.0.7"
pyaudio = "^0.2.14"
sounddevice = "^0.4.6"
numpy = "^1.26.4"
soundfile = "^0.12.1"
matplotlib = "^3.8.4"
pyqtgraph = "^0.13.4"
pyqt6 = "^6.6.1"
keyboard = "^0.13.5"
pynput = "^1.7.6"
pypattyrn = "^1.2"
scipy = "^1.13.0"
librosa = "^0.10.1"
resampy = "^0.4.3"
aubio = "^0.4.9"
pydub = "^0.25.1"
pyopengl = "^3.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
